tests/bug_detector_tests/strictModeR5.test
################################################################################
#    Copyright (c) 2013, KAIST.
#    All rights reserved.
#
#    Use is subject to license terms.
#
#    This distribution may include materials developed by third parties.
################################################################################
tests=strictModeR5
BUGDETECTOR_TESTS_DIR=${JS_HOME}/tests/bug_detector_tests
bug-detector
bug-detector_out_WCIequals=\
 \n\
* Bug Detector * \n\
strictModeR5.js:5:1~5:10: [ReferenceError] 'arguments' must not evaluate to an unresolvable reference within strict mode code. \n\
strictModeR5.js:4:1~4:9: [SyntaxError] 'eval' cannot appear as an identifier of the LeftHandSideExpression within strict mode code. \n\
strictModeR5.js:4:11~4:19: [SyntaxError] 'eval' cannot appear as an identifier of the LeftHandSideExpression within strict mode code. \n\
strictModeR5.js:4:21~4:25: [SyntaxError] 'eval' cannot appear as an identifier of the PostfixExpression within strict mode code. \n\
strictModeR5.js:4:31~4:35: [SyntaxError] 'eval' cannot appear as an identifier of the UnaryExpression within strict mode code. \n\
strictModeR5.js:5:1~5:14: [SyntaxError] 'arguments' cannot appear as an identifier of the LeftHandSideExpression within strict mode code. \n\
strictModeR5.js:5:16~5:28: [SyntaxError] 'arguments' cannot appear as an identifier of the LeftHandSideExpression within strict mode code. \n\
strictModeR5.js:5:30~5:39: [SyntaxError] 'arguments' cannot appear as an identifier of the PostfixExpression within strict mode code. \n\
strictModeR5.js:5:45~5:54: [SyntaxError] 'arguments' cannot appear as an identifier of the UnaryExpression within strict mode code. \n\
 \n\
============== Total Count ============== \n\
|  RangeErrors       :      0 (  0.00%) | \n\
|  ReferenceErrors   :      1 ( 11.11%) | \n\
|  SyntaxErrors      :      8 ( 88.89%) | \n\
|  TypeErrors        :      0 (  0.00%) | \n\
|  URIErrors         :      0 (  0.00%) | \n\
|  Warnings          :      0 (  0.00%) | \n\
========================================= \n\
============ Statistics ============= \n\
|  AbsentRead              :      0 | \n\
|  BinaryOperator          :      0 | \n\
|  BuiltinTypeError        :      0 | \n\
|  BuiltinWrongArgType     :      0 | \n\
|  CallConstFunc           :      0 | \n\
|  CallNonConstructor      :      0 | \n\
|  CallNonFunction         :      0 | \n\
|  ConditionalBranch       :      0 | \n\
|  ConvertToNumber         :      0 | \n\
|  DefaultValue            :      0 | \n\
|  Deprecated              :      0 | \n\
|  FunctionArgSize         :      0 | \n\
|  GlobalThis              :      0 | \n\
|  ImplicitTypeConversion  :      0 | \n\
|  AccessingNullOrUndef    :      0 | \n\
|  PrimitiveToObject       :      0 | \n\
|  RangeError              :      0 | \n\
|  Shadowing               :      0 | \n\
|  StrictMode              :      9 | \n\
|  UncalledFunction        :      0 | \n\
|  UnreachableCode         :      0 | \n\
|  ValueNeverRead          :      0 | \n\
|  VaryingTypeArguments    :      0 | \n\
|  WrongThisType           :      0 | \n\
|  RegularExpression       :      0 | \n\
|  WrongArgument           :      0 | \n\
===================================== \n\
\n
bug-detector_err_equals=
